--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,11 +25,11 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
     --radius: 0.5rem;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
+    --chart-1: 139 65% 20%;
+    --chart-2: 140 74% 44%;
+    --chart-3: 142 88% 28%;
+    --chart-4: 137 55% 15%;
+    --chart-5: 141 40% 9%;
   }
 
   .dark {
@@ -70,4 +70,11 @@
   body::-webkit-scrollbar {
     @apply hidden;
   }
+}
+.leaflet-container {
+  z-index: 0; /* Contenedor principal del mapa */
+}
+
+.leaflet-control {
+  z-index: 1 !important; /* Herramientas de control del mapa */
 }
